--- a/backoffice.html
+++ b/backoffice.html
@@ -79,6 +79,15 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
     <script>
+
+        const productSubmit = async () => {
+            try {
+
+            } catch (error) {
+
+            }
+        }
+
         window.onload = async () => {
             const products = document.getElementById('products')
 
