--- a/backoffice.html
+++ b/backoffice.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item ">
-                            <a class="nav-link" href="./">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="./backoffice.html">Backoffice</a>
@@ -41,6 +41,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6">
                         <h1 class="mt-5 mb-4">Backoffice</h1>
+                        <hr>
                         <form onsubmit="productSubmit()" class="mb-5">
                             <div class="form-group">
                                 <label for="name">Product Name</label>
