--- a/index.html
+++ b/index.html
@@ -70,22 +70,25 @@
                 console.log("Data", data);
 
                 const products = document.getElementById("products")
+                products.innerHTML = ""
 
-                products.innerHTML = data.map(product => ` <div class="col-12 col-sm-6 col-md-4 mb-4">
+                data.forEach(product => {
+                    products.innerHTML += ` <div class="col-12 col-sm-6 col-md-4 mb-4">
                         <div class="card h-100" >
-                            <img src=${data} class="card-img-top" alt="...">
+                            <img src=${data.imageUrl} class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">${data}</h5>
-                              <p class="card-text"> ${data}</p>
+                              <h5 class="card-title">${data.name}</h5>
+                              <p class="card-text"> ${data.description}</p>
                             </div>
                             <ul class="list-group list-group-flush">
                               <li class="list-group-item d-flex">
-                                  <span><strong>${data}</strong></span>
+                                  <span><strong>${data.brand}</strong></span>
                                   <span class="badge badge-success ml-auto py-2">£ ${data}</span>
                                 </li>
                             </ul>
                           </div>
-                    </div>`)
+                    </div>`
+                });
 
             } catch (error) {
                 console.log(error);
