--- a/backoffice.html
+++ b/backoffice.html
@@ -83,6 +83,8 @@
 
         const productSubmit = async (event) => {
 
+            console.log(event);
+            
             const product = {
                 name: document.getElementById('name').value,
                 description: document.getElementById('description').value,
@@ -93,7 +95,7 @@
 
 
             try {
-                const response = await fetch(apiUrl, {
+                const response = await fetch("https://striveschool-api.herokuapp.com/api/product/", {
                     method: "POST",
                     body: JSON.stringify(product),
                     headers: {
