--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <ul class="list-group list-group-flush">
                               <li class="list-group-item d-flex">
                                   <span><strong>${product.brand}</strong></span>
-                                  <span class="badge badge-success ml-auto py-2">£ ${data}</span>
+                                  <span class="badge badge-success ml-auto py-2">£ ${product.price}</span>
                                 </li>
                             </ul>
                           </div>
